feat: allow EmailService sending email with only bcc as recipient